--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
 
     <!-- Favicons -->
     <link
-      href="https://cdn.discordapp.com/attachments/1056278573113159742/1120722049984376853/favicon.png"
+      href="https://1drv.ms/i/c/40cdede54f687ae1/IQPjIFtyH1b-Q6CCiNF6wwozAXCEyd1cDh-sZMQUZbsRTQM?width=32&height=32"
       rel="icon"
     />
     <link
-      href="https://cdn.discordapp.com/attachments/1056278573113159742/1120722049711755384/apple-touch-icon.png"
+      href="https://1drv.ms/i/c/40cdede54f687ae1/IQNpTf8NZOCLR7ycbevjFm8GAWmagDEReD8mu0L3Gb5hNYM?width=180&height=180"
       rel="apple-touch-icon"
     />
 
@@ -174,11 +174,12 @@
                 2D Rigging Artist (using Toon Boom Harmony), and even served as
                 an Animation Director on various projects for a year in AQ Wise
                 SDN BHD.
-                <br /><br />Driven by my love for the latest technology, I
-                pursued further education as a Teknologi Sistem Komputer student
-                at Giatmara Johor Bahru for six months. Alongside my studies,
-                I've freelanced as a IT technical assistant and explored
-                creative business opportunities.
+
+                <br /><br />I pursued further education as a Teknologi Sistem
+                Komputer student at Giatmara Johor Bahru for six months.
+                Alongside my studies, I've freelanced by doing technical support
+                and work as printing operator for Richest Design Legacy SDN BHD
+                over a year.
               </p>
             </div>
           </div>
