--- a/about.html
+++ b/about.html
@@ -176,10 +176,10 @@
                 SDN BHD.
 
                 <br /><br />I pursued further education as a Teknologi Sistem
-                Komputer student at Giatmara Johor Bahru for six months.
-                Alongside my studies, I've freelanced by doing technical support
-                and work as printing operator for Richest Design Legacy SDN BHD
-                over a year.
+                Komputer (Computer System Technology) student at Giatmara Johor
+                Bahru for six months. Alongside my studies, I've freelanced by
+                doing computer technical support and work as printing operator
+                for Richest Design Legacy SDN BHD over a year.
               </p>
             </div>
           </div>
@@ -191,6 +191,27 @@
           >
             <h2 class="mb-4 text-2xl">Educations & Experiences</h2>
             <!-- Timeline item 0 -->
+            <div
+              class="border-l-4 border-orange-500 border-solid relative py-8 pl-10"
+            >
+              <div
+                class="h-full absolute inset-0 flex items-center justify-center"
+              ></div>
+              <div class="relative">
+                <h2 class="text-lg mb-1">PRINTING OPERATOR</h2>
+                <h3 class="text-gray-200">
+                  Richest Design Legacy SDN BHD, Pasir Putih, Pasir Gudang,
+                  Johor<br />
+                </h3>
+                <p class="text-gray-200">
+                  Designing and installing a variety of signage including
+                  signboards, banners, x-banners, photocanvas, stickers,
+                  apparel, and more.
+                </p>
+                <span class="text-gray-400 text-sm">2023 - 2024</span>
+              </div>
+            </div>
+            <!-- Timeline item 1 -->
             <div
               class="border-l-4 border-red-500 border-solid relative py-8 pl-10"
             >
@@ -215,7 +236,7 @@
                 <span class="text-gray-400 text-sm">2023</span>
               </div>
             </div>
-            <!-- Timeline item 1 -->
+            <!-- Timeline item 2 -->
             <div
               class="border-l-4 border-purple-500 border-solid relative py-8 pl-10"
             >
@@ -235,7 +256,7 @@
               </div>
             </div>
 
-            <!-- Timeline item 2 -->
+            <!-- Timeline item 3 -->
             <div
               class="border-l-4 border-blue-500 border-solid relative py-8 pl-10"
             >
@@ -261,7 +282,7 @@
               </div>
             </div>
 
-            <!-- Timeline item 3 -->
+            <!-- Timeline item 4 -->
             <div
               class="border-l-4 border-green-500 border-solid relative py-8 pl-10"
             >
@@ -289,7 +310,7 @@
               </div>
             </div>
 
-            <!-- Timeline item 4 -->
+            <!-- Timeline item 5 -->
             <div
               class="border-l-4 border-yellow-500 border-solid relative py-8 pl-10"
             >
