--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
                 Ismail
               </h2>
               <p class="text-justify">
-                A creator of creative/digital works such as Motion graphics
-                &amp; Digital Editing based in Pasir Gudang, Johor.
+                A creator of digital works such as Motion graphics, Digital
+                Editing &amp; Computer Technical Support based in Pasir Gudang,
+                Johor.
               </p>
             </div>
           </div>
@@ -209,7 +210,8 @@
                   <marquee behavior="scroll" direction="left" scrollamount="8">
                     <p class="whitespace-nowrap">
                       Video Editing • Photo Editing • Flash Animation • Motion
-                      Graphics • Beginner Web Developer • IT Technical Support
+                      Graphics • Beginner Web Developer • Computer Technical
+                      Support
                     </p>
                   </marquee>
                 </div>
