--- a/about.html
+++ b/about.html
@@ -172,14 +172,14 @@
                 animation at Politeknik Ibrahim Sultan. During that time, I
                 gained hands-on experience as a 2.5D Animator, Senior Animator,
                 2D Rigging Artist (using Toon Boom Harmony), and even served as
-                an Animation Director on various projects for a year in AQ Wise
-                SDN BHD.
+                an Lead Animation and mentoring junior on various projects for a
+                year in AQ Wise SDN BHD.
 
                 <br /><br />I pursued further education as a Teknologi Sistem
                 Komputer (Computer System Technology) student at Giatmara Johor
                 Bahru for six months. Alongside my studies, I've freelanced by
-                doing computer technical support and work as printing operator
-                for Richest Design Legacy SDN BHD over a year.
+                doing computer technical support and work as printing operator &
+                graphic designer for Richest Design Legacy SDN BHD over a year.
               </p>
             </div>
           </div>
@@ -198,7 +198,9 @@
                 class="h-full absolute inset-0 flex items-center justify-center"
               ></div>
               <div class="relative">
-                <h2 class="text-lg mb-1">PRINTING OPERATOR</h2>
+                <h2 class="text-lg mb-1">
+                  PRINTING OPERATOR & GRAPHIC DESIGNER
+                </h2>
                 <h3 class="text-gray-200">
                   Richest Design Legacy SDN BHD, Pasir Putih, Pasir Gudang,
                   Johor<br />
@@ -249,8 +251,14 @@
                 <p class="text-gray-200">
                   Produce 2.5D animations based on 24 prophets stories based
                   Prof Dr Solehah’s book Revolusi Bahasa & Asas Tamadun <br />
-                  using software such as Adobe Photoshop, Adobe Premiere Pro &
-                  Toon Boom Harmony.
+                  using software such as Adobe Photoshop, Adobe Premiere Pro,
+                  Adobe After Effect & Toon Boom Harmony.
+                  <br /><br />
+                  Served as Senior Animator for Junior Animator.
+                  <br /><br />
+                  Doing Project from Pre-production (Concept Designer,
+                  Storyboarding), Production (Animating, Rigging),
+                  Post-Production (Compositor, Sound Editing, Editing).
                 </p>
                 <span class="text-gray-400 text-sm">2021 - 2022</span>
               </div>
