--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
                 Ismail
               </h2>
               <p class="text-justify">
-                A creator of digital works such as Motion graphics, Digital
-                Editing &amp; Computer Technical Support based in Pasir Gudang,
-                Johor.
+                A creator of digital works such as Motion graphics, Video &
+                Photo editing, 2.5D Animation &amp; Computer Technical Support
+                based in Pasir Gudang, Johor.
               </p>
             </div>
           </div>
           <!-- About Me End -->
 
-          <!-- Animate Banner, Certification, and CV Container Start -->
+          <!-- Animate Banner, Certification, and Resume Container Start -->
           <div class="rounded-lg">
             <!-- Animate Banner Start -->
             <div
@@ -209,9 +209,9 @@
                 <div class="overflow-hidden rounded-lg px-2">
                   <marquee behavior="scroll" direction="left" scrollamount="8">
                     <p class="whitespace-nowrap">
-                      Video Editing • Photo Editing • Flash Animation • Motion
-                      Graphics • Beginner Web Developer • Computer Technical
-                      Support
+                      Video Editing • Photo Editing • 2.5D Animation • Motion
+                      Graphics • Graphic Designer • Beginner Web Developer •
+                      Computer Technical Support
                     </p>
                   </marquee>
                 </div>
@@ -219,7 +219,7 @@
             </div>
             <!-- Animate Banner End -->
 
-            <!-- Certification, and CV Container Start -->
+            <!-- Certification, and Resume Container Start -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
               <!-- Certification Start -->
               <div
@@ -248,11 +248,11 @@
               </div>
               <!-- Certification End -->
 
-              <!-- CV Start -->
+              <!-- Resume Start -->
               <div
                 class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8"
               >
-                <h2 class="mb-4 text-2xl">MY CV</h2>
+                <h2 class="mb-4 text-2xl">MY RESUME</h2>
                 <p>A brief overview of me and my qualifications.</p>
                 <a
                   href="https://1drv.ms/b/c/40cdede54f687ae1/IQM9r_TSGi4ZTYQIootv8m9MAY6RMvlNgWmvpqMNukh0e2Y"
@@ -260,11 +260,11 @@
                   class="inline-block mt-4 px-4 py-2 text-white rounded hover:bg-hover-blue download-icon"
                 ></a>
               </div>
-              <!-- CV End -->
+              <!-- Resume End -->
             </div>
-            <!-- Certification, and CV Container End -->
+            <!-- Certification, and Resume Container End -->
           </div>
-          <!-- Animate Banner, Certification, and CV Container End -->
+          <!-- Animate Banner, Certification, and Resume Container End -->
 
           <!-- Portfolio Start -->
           <div
@@ -276,11 +276,17 @@
             >
               <div class="relative" style="padding-top: 56.25%">
                 <iframe
-                  src="https://1drv.ms/v/c/40cdede54f687ae1/IQN3Mcv2B1bmSbP-0DOGuqvKAS8ymekJC8zV-Ps67-JF4Ok"
-                  class="absolute top-0 left-0 w-full h-full max-w-[640px] max-h-[335px] mx-auto"
+                  style="
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                  "
+                  src="https://www.youtube.com/embed/IemTjFapI40?controls=0&autoplay=1&loop=1&playlist=IemTjFapI40&mute=1"
+                  title="Portfolio"
                   frameborder="0"
-                  scrolling="no"
-                  allowfullscreen
+                  allow="autoplay"
                 ></iframe>
               </div>
             </div>
