--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,11 +7,11 @@
 
     <!-- Favicons -->
     <link
-      href="https://1drv.ms/i/c/40cdede54f687ae1/IQPjIFtyH1b-Q6CCiNF6wwozAXCEyd1cDh-sZMQUZbsRTQM?width=32&height=32"
+      href="https://1drv.ms/u/c/40cdede54f687ae1/IQT2S30zxkOwQp8C5oqHU2EWAexbEynMz9KdGHuo5eVLrak"
       rel="icon"
     />
     <link
-      href="https://1drv.ms/i/c/40cdede54f687ae1/IQNpTf8NZOCLR7ycbevjFm8GAWmagDEReD8mu0L3Gb5hNYM?width=180&height=180"
+      href="https://1drv.ms/u/c/40cdede54f687ae1/IQSD3_mJnY5ITZNVBf1Pgm1OATwELI3t7Brx6KcMThhl73E"
       rel="apple-touch-icon"
     />
 
@@ -84,6 +84,9 @@
 
   <body>
     <div class="flex h-screen bg-div text-white">
+      <!-- ⭐ Stars Container Start -->
+      <div class="stars-container" id="starsContainer"></div>
+      <!-- ⭐ Stars Container End -->
       <!-- Sidebar -->
       <!-- Large Sidebar Start -->
       <div class="w-20 bg-gray-800 hide">
@@ -92,7 +95,7 @@
         >
           <img
             class="w-12 h-12"
-            src="https://1drv.ms/i/c/40cdede54f687ae1/IQOmLX3AyGTTTpDxK_9dwHGqAQ8Wx9j38gAqIbhtq9iWNZ4?width=2000&height=2000"
+            src="https://1drv.ms/u/c/40cdede54f687ae1/IQRlxrmvmQYMSJQwQUvHpkonAUTw7jfPRAGcOjhAUrGBcOs"
             alt="Logo"
           />
         </div>
@@ -136,7 +139,7 @@
         >
           <img
             class="w-12 h-12"
-            src="https://1drv.ms/i/c/40cdede54f687ae1/IQOmLX3AyGTTTpDxK_9dwHGqAQ8Wx9j38gAqIbhtq9iWNZ4?width=2000&height=2000"
+            src="https://1drv.ms/u/c/40cdede54f687ae1/IQRlxrmvmQYMSJQwQUvHpkonAUTw7jfPRAGcOjhAUrGBcOs"
             alt="Logo"
           />
         </div>
@@ -149,7 +152,7 @@
         <a href="portfolio.html" class="hover:bg-gray-700">
           <span class="w-6 h-6 material-symbols-outlined">dataset</span>
         </a>
-        <a href="#contact" class="hover:bg-gray-700">
+        <a href="#contact-sm" class="hover:bg-gray-700">
           <span class="w-6 h-6 material-symbols-outlined">contacts</span>
         </a>
       </div>
@@ -164,19 +167,22 @@
           <div
             class="relative rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8 flex flex-col lg:flex-row lg:items-center gap-4 lg:justify-start items-center"
           >
-            <!-- <div class="absolute top-0 left-0 w-full h-full">
+            <div class="absolute top-0 left-0 w-full h-full">
               <video
                 class="w-full h-full object-cover mix-blend-screen"
                 autoplay
                 loop
                 muted
+                playsinline
+                preload="auto"
+                disablepictureinpicture
+                webkit-playsinline
               >
-                <source
-                  src="https://1drv.ms/v/c/40cdede54f687ae1/IQO576Wgz7MeSJkN7u0EgHazAXkFLUdr43oJVBmFZk94HWQ"
-                  type="video/mp4"
-                />
+                <source src="./glitch.mp4" type="video/mp4" />
+                <source src="./glitch.webm" type="video/webm" />
+                Your browser does not support the video tag.
               </video>
-            </div> -->
+            </div>
             <img
               src="https://1drv.ms/i/c/40cdede54f687ae1/IQM09ofcxIX6Q76gfBLBKECiAe8lBRP1_zXb6BHJ-AcQm0Q?width=1024"
               alt="Profile Image"
@@ -206,14 +212,14 @@
                 class="h-10 w-full flex items-center mb-8"
                 id="animate-banner"
               >
-                <div class="overflow-hidden rounded-lg px-2">
-                  <marquee behavior="scroll" direction="left" scrollamount="8">
-                    <p class="whitespace-nowrap">
+                <div class="overflow-hidden rounded-lg px-2 w-full">
+                  <div class="marquee-container">
+                    <p class="marquee-text glow-fade">
                       Video Editing • Photo Editing • 2.5D Animation • Motion
                       Graphics • Graphic Designer • Beginner Web Developer •
                       Computer Technical Support
                     </p>
-                  </marquee>
+                  </div>
                 </div>
               </div>
             </div>
@@ -225,7 +231,7 @@
               <div
                 class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8"
               >
-                <h2 class="mb-4 text-2xl">Certification</h2>
+                <h2 class="mb-4 text-2xl text-center">Certification</h2>
                 <div class="swiper-container">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -248,19 +254,66 @@
               </div>
               <!-- Certification End -->
 
-              <!-- Resume Start -->
+              <!-- Resume Mobile Start -->
               <div
-                class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8"
+                class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8 block md:hidden"
               >
-                <h2 class="mb-4 text-2xl">MY RESUME</h2>
-                <p>A brief overview of me and my qualifications.</p>
-                <a
-                  href="https://1drv.ms/b/c/40cdede54f687ae1/IQM9r_TSGi4ZTYQIootv8m9MAY6RMvlNgWmvpqMNukh0e2Y"
-                  target="_blank"
-                  class="inline-block mt-4 px-4 py-2 text-white rounded hover:bg-hover-blue download-icon"
-                ></a>
+                <h2 class="mb-4 text-2xl text-center">MY RESUME</h2>
+                <p class="text-center">
+                  A brief overview of me and my qualifications.
+                </p>
+                <div class="flex justify-center">
+                  <a
+                    href="https://1drv.ms/b/c/40cdede54f687ae1/IQQ9r_TSGi4ZTYQIootv8m9MAY6RMvlNgWmvpqMNukh0e2Y"
+                    target="_blank"
+                    class="inline-block mt-4 px-4 py-2 text-white rounded hover:bg-hover-blue download-icon"
+                  ></a>
+                </div>
               </div>
-              <!-- Resume End -->
+              <!-- Resume Mobile End -->
+              <!-- Contact Start -->
+              <div
+                class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8 hidden md:block"
+                id="contact"
+              >
+                <h2 class="mb-4 text-2xl text-center">Contact</h2>
+                <div class="more-info flex items-center justify-center">
+                  <ul class="list-ico">
+                    <li>
+                      <span class="bi bi-geo-alt"></span> Pasir Gudang, Johor.
+                    </li>
+                    <li>
+                      <span class="bi bi-envelope"></span>
+                      m.firdaus3130@gmail.com
+                    </li>
+                  </ul>
+                </div>
+                <div class="socials flex items-center justify-center">
+                  <ul>
+                    <li>
+                      <a target="_blank" href="https://www.facebook.com/fds.fl"
+                        ><span class="ico-circle"
+                          ><i class="bi bi-facebook"></i></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a target="_blank" href=""
+                        ><span class="ico-circle"
+                          ><i class="bi bi-instagram"></i></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        target="_blank"
+                        href="https://www.linkedin.com/in/muhammad-firdaus-7971561ba/"
+                        ><span class="ico-circle"
+                          ><i class="bi bi-linkedin"></i></span
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- Contact Me End -->
             </div>
             <!-- Certification, and Resume Container End -->
           </div>
@@ -270,24 +323,26 @@
           <div
             class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8"
           >
-            <h2 class="mb-4 text-2xl">Portfolio</h2>
-            <div
-              class="w-full max-w-full md:max-w-lg lg:max-w-xl xl:max-w-2xl px-4"
-            >
-              <div class="relative" style="padding-top: 56.25%">
-                <iframe
-                  style="
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                  "
-                  src="https://www.youtube.com/embed/IemTjFapI40?controls=0&autoplay=1&loop=1&playlist=IemTjFapI40&mute=1"
-                  title="Portfolio"
-                  frameborder="0"
-                  allow="autoplay"
-                ></iframe>
+            <h2 class="mb-4 text-2xl text-center">Portfolio</h2>
+            <div class="flex justify-center">
+              <div
+                class="w-full max-w-full md:max-w-lg lg:max-w-xl xl:max-w-2xl px-4"
+              >
+                <div class="relative" style="padding-top: 56.25%">
+                  <iframe
+                    style="
+                      position: absolute;
+                      top: 0;
+                      left: 0;
+                      width: 100%;
+                      height: 100%;
+                    "
+                    src="https://www.youtube.com/embed/IemTjFapI40?controls=0&autoplay=1&loop=1&playlist=IemTjFapI40&mute=1"
+                    title="Portfolio"
+                    frameborder="0"
+                    allow="autoplay"
+                  ></iframe>
+                </div>
               </div>
             </div>
             <div class="flex justify-center mt-4">
@@ -303,13 +358,13 @@
           </div>
           <!-- Portfolio End -->
 
-          <!-- Contact Start -->
+          <!-- Contact Mobile Start -->
           <div
-            class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8"
-            id="contact"
+            class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8 block md:hidden"
+            id="contact-sm"
           >
-            <h2 class="mb-4 text-2xl">Contact</h2>
-            <div class="more-info">
+            <h2 class="mb-4 text-2xl text-center">Contact</h2>
+            <div class="more-info flex items-center justify-center">
               <ul class="list-ico">
                 <li>
                   <span class="bi bi-geo-alt"></span> Pasir Gudang, Johor.
@@ -319,7 +374,7 @@
                 </li>
               </ul>
             </div>
-            <div class="socials">
+            <div class="socials flex items-center justify-center">
               <ul>
                 <li>
                   <a target="_blank" href="https://www.facebook.com/fds.fl"
@@ -344,7 +399,25 @@
               </ul>
             </div>
           </div>
-          <!-- Contact Me End -->
+          <!-- Contact Me Mobile End -->
+          <!-- Resume Start -->
+          <div
+            class="rounded-lg bg-gradient-to-br from-violet-800 to-blue-900 p-8 hidden md:block"
+          >
+            <h2 class="mb-4 text-2xl text-center">MY RESUME</h2>
+            <p class="text-center">
+              A brief overview of me and my qualifications.
+            </p>
+            <div class="flex justify-center max-w-4xl mx-auto">
+              <iframe
+                src="https://1drv.ms/b/c/40cdede54f687ae1/IQQ9r_TSGi4ZTYQIootv8m9MAY6RMvlNgWmvpqMNukh0e2Y"
+                class="w-full sm:h-[200px] md:h-[380px]"
+                frameborder="0"
+                scrolling="no"
+              ></iframe>
+            </div>
+          </div>
+          <!-- Resume End -->
         </div>
       </div>
       <!-- Main Content End -->
@@ -388,6 +461,30 @@
           event.target.remove();
         }
       }
+
+      // Generate Y2K Stars
+      (function () {
+        const container = document.getElementById("starsContainer");
+        const stars = [
+          { count: 15, minSize: 15, maxSize: 20 }, // Medium stars
+          { count: 80, minSize: 8, maxSize: 12 }, // Small stars
+        ];
+
+        stars.forEach(({ count, minSize, maxSize }) => {
+          for (let i = 0; i < count; i++) {
+            const star = document.createElement("div");
+            star.className = "y2k-star";
+            star.style.left = Math.random() * 100 + "%";
+            star.style.top = Math.random() * 100 + "%";
+            star.style.setProperty(
+              "--size",
+              Math.random() * (maxSize - minSize) + minSize + "px",
+            );
+            star.style.animationDelay = Math.random() * 3 + "s";
+            container.appendChild(star);
+          }
+        });
+      })();
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox-plus-jquery.min.js"></script>
   </body>
